criação da View Parcial

--- a/src/MVC.AulaEtec/Views/Cliente/CreateFull.cshtml
+++ b/src/MVC.AulaEtec/Views/Cliente/CreateFull.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Inclusão de Cliente</h1>
 
-<h4>ClienteModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-12">
@@ -100,6 +99,7 @@
             </div>
 
             <!-- dados de endereço-->
+            <h4>Dados de endereçamento</h4>
             <div class="row">
                 <div class="col-md-6">
 
