--- a/src/MVC.AulaEtec/Views/Home/Index.cshtml
+++ b/src/MVC.AulaEtec/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model DashBoardListModel
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -6,3 +7,13 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+
+
+@{
+    if (Model.Valores.Any())
+    {
+        <partial name="~/Views/Home/Dashboard.cshtml" for="Valores"/>
+    }
+
+}
